[tool.poetry]
name = "dash-leaflet-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dash_leaflet_docs"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "2.0.0"
requests = "^2.28.2"
gunicorn = "^20.1.0"
dash-leaflet = "0.1.23"
dash-extensions = "0.0.65"
dash-bootstrap-components = "1.0.0"
pandas = "^1.5"
numpy = "^1.24.2"
werkzeug = "2.0.3"
protobuf = "3.20.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
